# pyrorb

./: .gitignore  README.md  activate.sh  pyproject.toml
.idx/: dev.nix
pyrorb/: _read_out.py  client.py  config_manager.py  file_manager.py  read_out.py  result.py  rorb_processor.py  runner.py  utils.py
pyrorb/experiments/: base_experiment.py  storm_ensemble.py
pyrorb/tools/: kc_calibration.py  kc_calibration_utils.py  test.py
sample_dataset/: catg.catg  stm.stm  stm1.stm
tests/: test_base_experiment.py  test_basics.py  test_client.py
workflows/nbs/: 001-read-out-files.ipynb  003_creat_single_sim.ipynb  004_storm_ensemble_experiments.ipynb  01.ipynb  02_storage_sa.ipynb
