[tool.poetry]
name = "pyrorb"
version = "0.1.0"
description = ""
authors = ["Ashkan Shokri <ashkan.shokri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pandas = "^2.1.2"
httpx = "^0.25.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
